--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@ div {text-align: center;}
            
 <div class="col-md-12">
  <center><p style="font-size:25px;color:white;margin-top:20px;">Machine Learning Lab Experiment 7</p></center>
- <center><p style="font-size:25px;color:white;margin-top:20px;">Developed by Ishu kumar</p></center> 
+ <center><p style="font-size:25px;color:white;margin-top:20px;">Developed by Kumari khushboo</p></center> 
 </div>
 </div>
 </div>
